<resources>
    <string name="app_name">F1 News</string>
    <string name="username">Имя пользователя</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="authorization">Авторизация</string>
    <string name="sign_in">Войти</string>
    <string name="registration">Регистрация</string>
    <string name="enter_username_or_email">Введите имя пользователя или email</string>
    <string name="enter_password">Введите пароль</string>
    <string name="news">Новости</string>
    <string name="arrow_down">Стрелка вниз</string>
    <string name="championship">Чемпионат</string>
    <string name="server_error">Сервер временно не доступен</string>
    <string name="number">№</string>
    <string name="driver">Гонщик</string>
    <string name="team">Команда</string>
    <string name="points">Очки</string>
    <string name="card_view_behavior">ru.kozirfm.f1news.ui.behavior.CardViewBehavior</string>
</resources>